--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="skill-row">
             <img class="chilli" src="https://media1.giphy.com/media/fqVxE6XPCfKfJLriFw/200w.webp?cid=ecf05e47o09dlb6x3cagf3w0kmwfqcwqwsq9c4xss7u3qav8&rid=200w.webp&ct=g" alt="">
             <h3>Hot Wings Challenge</h3>
-            <p>But my best skill is actually in eating hot wings.I am undisputed king of Hot Wing Challenge. Ghost Peppers and Carolina Reapers are my Favorite snacks.</p>
+            <p>But my best skill is actually in eating hot wings.I am undisputed king of Hot Wing Challenge. Ghost Peppers and Carolina Reapers are my Favorite snacks.😈</p>
           </div>
         </div>
         <hr>
